Fix search input box on search popup.
Search box was being cut off on the left side.

--- a/tool-ui/src/main/webapp/style/tool.less
+++ b/tool-ui/src/main/webapp/style/tool.less
@@ -300,10 +300,10 @@
     }
 
     .searchInput {
-        left: 0;
+        left: 10px;
+        right: 10px;
         position: absolute;
         top: -45px;
-        width: 100%;
     }
 
     .action-cancel {
